fix: swap money icon with png to ensure proper font family on IE

--- a/Styles/global/2_base/_icons.less
+++ b/Styles/global/2_base/_icons.less
@@ -244,9 +244,15 @@ you can use the generic selector below, but it's slower:
 .@{simple-line-icon-prefix}clipboard-check.icon--white {
 	background-image: url('https://imdi-styles.firebaseapp.com/UI/icons/white/icon-clipboard-check.svg');
 }
+
+
+// .@{simple-line-icon-prefix}money.icon--white {
+// 	background-image: url('https://imdi-styles.firebaseapp.com/UI/icons/white/icon-money.svg');
+// }
 .@{simple-line-icon-prefix}money.icon--white {
-	background-image: url('https://imdi-styles.firebaseapp.com/UI/icons/white/icon-money.svg');
+	background-image: url('https://imdi-styles.firebaseapp.com/UI/icons/white/icon-money.png');
 }
+
 .@{simple-line-icon-prefix}key.icon--white {
 	background-image: url('https://imdi-styles.firebaseapp.com/UI/icons/white/icon-key.svg');
 }
@@ -495,9 +501,14 @@ you can use the generic selector below, but it's slower:
 	background-image: url('https://imdi-styles.firebaseapp.com/UI/icons/green/icon-clipboard-check.svg');
 }
 
+
 .@{simple-line-icon-prefix}money.icon--green {
-	background-image: url('https://imdi-styles.firebaseapp.com/UI/icons/green/icon-money.svg');
+	background-image: url('https://imdi-styles.firebaseapp.com/UI/icons/green/icon-money.png');
 }
+// .@{simple-line-icon-prefix}money.icon--green {
+// 	background-image: url('https://imdi-styles.firebaseapp.com/UI/icons/green/icon-money.svg');
+// }
+
 
 .@{simple-line-icon-prefix}key.icon--green {
 	background-image: url('https://imdi-styles.firebaseapp.com/UI/icons/green/icon-key.svg');
