--- a/Styles/global/3_blocks/_menu-frontpage.less
+++ b/Styles/global/3_blocks/_menu-frontpage.less
@@ -38,7 +38,7 @@
      &:hover {
        background: #50a450;
        color: #fff;
-       transform: scale(1.02);
+       transform: scale(1);
      }
 
      &:hover .menu-frontpage__desc {
